# AlgoritmosAmbiciosos_CinemaPlanner

./: README.md
cinema-planner/: pyproject.toml
cinema-planner/cinema_planner/: cli.py  config.py
cinema-planner/cinema_planner/commands/: fetch.py  movies.py
cinema-planner/cinema_planner/models/: __init__.py  movie.py  showtime.py
